{
    "name": "InputActions",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "56815050-ce7d-465f-b7bb-a289abc087c1",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "8b8e848a-626a-4daa-8f5b-7da35e8929d2",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "mouseLook",
                    "type": "Value",
                    "id": "9c168007-6aa5-4522-bb92-91cac6090c02",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "5d0d1601-d5a7-4273-afb2-7f636288bc3a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "c2042196-78df-4793-a31d-ff2a565e7a21",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "15f1ee06-6ce2-47f3-9d5a-9ab1962c8f80",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "86ac652d-52a8-4dd8-8ddc-94036df531ef",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "381838cc-ce5f-4d6d-8d00-6edfcefafd13",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2b3111ed-5248-44f5-ac89-e5f2741db0de",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b0bee957-c6eb-4e0c-9bb9-c7a19ddeb432",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3209efd-6bfa-46e0-a4fc-4d50bbcc14f7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DebugControls",
            "id": "5e781ff0-9bf3-44ba-86ba-8b96e256d57a",
            "actions": [
                {
                    "name": "CursorLock",
                    "type": "Button",
                    "id": "31b0baa5-7e21-4a3b-839e-704bb2004f1b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a8f12470-3af5-4910-b8ec-06dbb077b387",
                    "path": "<Keyboard>/leftBracket",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CursorLock",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}